--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start --dev": "ng serve --configuration=dev",
+    "start --pre": "ng serve --configuration=pre",
+    "start --prod": "ng serve --configuration=prod",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build:dev": "ng build --configuration=dev",
+    "build:pre": "ng build --configuration=pre",
+    "build:prod": "ng build --configuration=prod"
   },
   "private": true,
   "dependencies": {
